@@ -1,8 +1,13 @@
+2021-09-08 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  Improve handling of callee-cleanup of stack parameters.
+
 2021-09-06 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/main.c,
 	  src/z80/ralloc.c:
-	  Minor optiomn handling cleanup.
+	  Minor option handling cleanup.
 
 2021-09-02 Philipp Klaus Krause <pkk AT spth.de>
 
